Visual edits and bug fix
Bug 820086 - fix for display overlaps when sshkey has long name;
.action-more links red; correct dark red;

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -939,4 +939,11 @@ $cartridgeBorderWidth: 10px;
   }
 }
 
+.sshkey-name {
+  max-width: 80px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 
